@@ -2,6 +2,7 @@
 v6.0.0-git
 ----------
 
+[mms] Display message range when dragging slider on dynamic mailbox page.
 
 
 -----------
